# ams_as5600

./: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  as5600.c  as5600.h
src/: CMakeLists.txt  as5600.c  as5600.h
tests/: CMakeLists.txt  all_tests.cpp  as5600_tests.cpp
tests/mocks/: CMakeLists.txt  as5600_mocks.cpp  as5600_mocks.h  memory.cpp  registers.cpp
